# PyExfil

./: .flake8  .gitignore  CNAME  DOCUMENTATION.md  EXAMPLES.py  LICENSE.md  README.md  USAGE.md  _config.yml  exfiltrator.py  index.html  index.md  listener.py  params.json  pyproject.toml  requirements.txt  requirements2.7.txt  requirements3.txt  setup.py
docs/: DOCUMENTATION.md
examples/: examples.py
exfiltration/: http_exfiltration.py
http_cookies/: exfiltrator.py  listener.py
icmp/: exfiltrator.py  listener.py
incomplete/: dns_exfil.py
pyexfil/: __init__.py  dns_exfil.py  ftp_exfil.py  http_exfiltration.py  ntp_exfil.py
pyexfil/Comm/ARPBroadcast/: communicator.py
pyexfil/Comm/AllJoyn/: __init__.py
pyexfil/Comm/DB_LSP/: dblsp.py
pyexfil/Comm/DNSoTLS/: client.py  constants.py  server.py
pyexfil/Comm/GQUIC/: __init__.py
pyexfil/Comm/MDNS/: __init__.py
pyexfil/Comm/NTP_Body/: client.py  ntp_consts.py  server.py
pyexfil/Comm/cert_exchange/: __init__.py
pyexfil/Comm/icmp_ttl/: __init__.py
pyexfil/Comm/jetdirect/: communicator.py
pyexfil/Comm/packet_size/: __init__.py
pyexfil/DNS/: dns_exfil.py
pyexfil/HTTPS/: https_client.py  https_server.py  usage.py
pyexfil/ICMP/: icmp_exfiltration.py
pyexfil/POP3/: pop_exfil_client.py  pop_exfil_server.py
pyexfil/Stega/ConvertToText/: __init__.py  bip39_encode.py  dictionary.txt
pyexfil/includes/: __init__.py  data_generator.py  encryption_wrappers.py  exceptions.py  general.py  image_manipulation.py  prepare.py
pyexfil/physical/: __init__.py
static/: FullColor_1024x1024.eps
(+84 files in other folders)
