[tool.poetry]
name = "pyexfil"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
luhn = "^0.2.0"
names = "^0.3.0"
Faker = "^4.18.0"
pycrypto = "^2.6.1"
scapy = "^2.4.4"
requests = "^2.25.0"
base58 = "^2.0.1"
impacket = "^0.9.22"
pytz = "^2020.4"
numpy = "^1.19.4"
Pillow = "^8.0.1"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
